default/objects/Invoice__c/fields/AutoInvoicingAcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>AutoInvoicingAcceptanceDate__c</fullName>
    <label>Auto Invoicing Acceptance Date</label>
    <type>DateTime</type>
</CustomField>