default/objects/Invoice__c/fields/AutoInvoicingAccepted__c.field-meta.xml
<CustomField>
    <fullName>AutoInvoicingAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Invoicing Accepted</label>
    <type>Checkbox</type>
</CustomField>