default/objects/Invoice__c/fields/CreditNoteDate__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteDate__c</fullName>
    <label>Credit Note Date</label>
    <type>DateTime</type>
</CustomField>