default/objects/Invoice__c/fields/CreditNoteNumber__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteNumber__c</fullName>
    <description>Format: AB/{Account SAP Entity}/{incremental}. Populated by Apex/Flow.</description>
    <label>Credit Note Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>