default/objects/Invoice__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>