default/objects/Invoice__c/fields/Guilds__c.field-meta.xml
<CustomField>
    <fullName>Guilds__c</fullName>
    <label>Guilds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Guild</valueSetName>
    </valueSet>
</CustomField>