default/objects/Invoice__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>Format: FT/{Account SAP Entity}/{incremental}. Populated by Apex/Flow.</description>
    <label>Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>