default/objects/Invoice__c/fields/PreInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>PreInvoiceDate__c</fullName>
    <label>Pre-Invoice Date</label>
    <type>DateTime</type>
</CustomField>