default/objects/Invoice__c/fields/PreInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>PreInvoiceNumber__c</fullName>
    <description>Format: PF/{Account SAP Entity}/{incremental}. Populated by Apex/Flow.</description>
    <label>Pre-Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>