default/objects/Invoice__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Provider)</relationshipLabel>
    <relationshipName>Invoices_Provider</relationshipName>
    <type>Lookup</type>
</CustomField>