default/objects/Invoice__c/fields/RectificationReason__c.field-meta.xml
<CustomField>
    <fullName>RectificationReason__c</fullName>
    <label>Rectification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PriceError</fullName>
                <label>Price Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>