default/objects/Invoice__c/fields/RelatedInvoice__c.field-meta.xml
<CustomField>
    <fullName>RelatedInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>