default/objects/Invoice__c/fields/TotalAmountWithoutVAT__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountWithoutVAT__c</fullName>
    <label>Total Amount Without VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>