default/objects/Invoice__c/fields/VATPercentage__c.field-meta.xml
<CustomField>
    <fullName>VATPercentage__c</fullName>
    <label>VAT Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0%</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4%</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10%</label>
            </value>
            <value>
                <fullName>21</fullName>
                <default>true</default>
                <label>21%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>