default/objects/Invoice__c/recordTypes/CreditNote.recordType-meta.xml
<RecordType>
    <fullName>CreditNote</fullName>
    <active>true</active>
    <label>Credit Note</label>
</RecordType>